# nlp-jieba.js

./: .eslintrc.yml  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.cn.md  README.md  package.json  vite.config.mjs
scripts/: build_wasm.js  opt.js
src/: lib.rs
test/: dict.test.mjs  split.test.mjs  tag.test.mjs  tokenize.test.mjs
