[package]
name = "jieba"
version = "1.0.0"
authors = ["Riceball LEE <snowyu.lee@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "tiny_malloc"]
tiny_malloc = ["dlmalloc/global"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
# 禁用默认的特征： default-features = false
jieba-rs = { path = "./jieba-rs", features = ["tfidf", "textrank"] }
serde-wasm-bindgen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "0.4.5", optional = true }
dlmalloc = { version = "0.2.8", optional = true }
tsify = "0.4.5"
js-sys = "0.3.77"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
